syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamHello (HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
	string name = 1;
}

// The response message containing the greetings.
message HelloReply {
	google.protobuf.Timestamp dateTimeStamp = 1;
	string message = 2;
	int32 count = 3;
	google.protobuf.Duration duration = 4;
}
